# LibSUNAI

./: README  index.html
_make/DevC++/LibSUNAI/: Makefile  SUNAILib.dev
_make/KDevelop4/LibSUNAI/: CMakeLists.txt  LibSUNAI.kdev4
_make/KDevelop4/LibSUNAI/.kdev4/: LibSUNAI.kdev4  _custom.kdev4
_make/MSVC10/LibSUNAI/: LibSUNAI.sdf  LibSUNAI.sln
_make/MSVC10/LibSUNAI/DataBaseAnalyzer/: DataBaseAnalyzer.vcxproj  DataBaseAnalyzer.vcxproj.filters
_make/MSVC10/LibSUNAI/DataBaseExplorer/: DBExplorer.cpp  DataBaseExplorer.vcxproj  DataBaseExplorer.vcxproj.filters
_make/MSVC10/LibSUNAI/LibSUNAI/: LibSUNAI.vcxproj  LibSUNAI.vcxproj.filters  ReadMe.txt
_make/MSVC10/LibSUNAI/LibSUNAI/DELETE/: AssemblyInfo.cpp  Stdafx.cpp
_make/MSVC10/LibSUNAI/LibSUNAI/Debug/: CL.read.1.tlog  CL.write.1.tlog  LibSUNAI.lastbuildstate  LibSUNAI.write.1.tlog  cl.command.1.tlog  vc100.idb
_make/Netbeans/nbproject/: Makefile-Debug.mk  Makefile-Release.mk  Makefile-impl.mk  Makefile-variables.mk  Package-Debug.bash  Package-Release.bash  configurations.xml  project.xml
data/artdb/: authors.dict  authorsData.txt  forms.dict  imagesData.txt  labels.txt  schools.dict  techniques.dict  timeFrames.dict  types.dict  url.txt
data/artdb/old_Data/: authors.dict  authorsData.txt  imagesData.txt  schools.dict  types.dict
include/: LibSUNAI.h  LibSUNAIException.h  compatibility.h
include/ArtDatabase/: ArtDatabase.h  ArtDatabaseException.h  LabelDictionary.h
include/ObjectDetection/: DetectedObject.h  FaceObjectDetector.h  ObjectDetector.h  ObjectDetectorException.h
samples/DBAnalyzer/: DBAnalyzer.cpp
samples/DBExplorer/: DBExplorer.cpp
src/: LibSUNAI.cpp
src/ArtDatabase/: ArtDatabase.cpp  LabelDictionary.cpp
src/ObjectDetection/: DetectedObject.cpp  FaceObjectDetector.cpp  ObjectDetector.cpp
